# structural

./: CMakeLists.txt  README.md
.github/workflows/: clang.yml  gcc.yml
include/structural/: basic_inplace_string.hpp  basic_static_string.hpp  bitset.hpp  hash.hpp  inplace_map.hpp  inplace_set.hpp  inplace_string.hpp  inplace_unordered_map.hpp  inplace_unordered_set.hpp  inplace_vector.hpp  named_bitset.hpp  pair.hpp  serialization.hpp  static_map.hpp  static_set.hpp  static_string.hpp  static_unordered_map.hpp  static_unordered_set.hpp  static_vector.hpp  structural_constant.hpp  structuralize.hpp  tuple.hpp  uninitialized_array.hpp  wrapper.hpp
include/structural/detail/: hash_combine.hpp  inplace_hash_table.hpp  inplace_red_black_tree.hpp  split.hpp  (+10 more)
test/: CMakeLists.txt  concept_structural_type_value.hpp  test_basic_static_string.cpp  test_bitset.cpp  test_hash.cpp  test_named_bitset.cpp  test_pair.cpp  test_static_vector.cpp  test_structural_constant.cpp  test_structurality.hpp  test_tuple.cpp  test_uninitialized_array.cpp  test_wrapper.cpp
test/basic_inplace_string/: basic_inplace_string_test_data.hpp  test_basic_inplace_string_assignment.cpp  test_basic_inplace_string_capacity_deduction.cpp  test_basic_inplace_string_comparison.cpp  test_basic_inplace_string_construction.cpp  test_basic_inplace_string_read_access.cpp  test_basic_inplace_string_structurality.cpp  test_basic_inplace_string_write_access.cpp
test/basic_static_string/: basic_static_string_test_data.hpp  test_basic_static_string_append.hpp  test_basic_static_string_assign.hpp  test_basic_static_string_assignment.cpp  test_basic_static_string_at.hpp  test_basic_static_string_c_str.hpp  test_basic_static_string_capacity_deduction.cpp  test_basic_static_string_clear.hpp  test_basic_static_string_compare.hpp  test_basic_static_string_comparison.cpp  test_basic_static_string_construction.cpp  test_basic_static_string_constructors.hpp  test_basic_static_string_conversion_string_view.hpp  test_basic_static_string_empty_size.hpp  test_basic_static_string_erase.hpp  test_basic_static_string_front_back.hpp  test_basic_static_string_hash.hpp  test_basic_static_string_insert.hpp  test_basic_static_string_iterators.hpp  test_basic_static_string_operator+.hpp  test_basic_static_string_operator+=.hpp  test_basic_static_string_operator<=>.hpp  test_basic_static_string_operator==.hpp  test_basic_static_string_operator[].hpp  test_basic_static_string_push_pop_back.hpp  test_basic_static_string_read_access.cpp  test_basic_static_string_replace.hpp  test_basic_static_string_starts_with_ends_with.hpp  test_basic_static_string_structurality.cpp  test_basic_static_string_substr.hpp  test_basic_static_string_write_access.cpp
test/inplace_map/: test_inplace_map_assignment.cpp  test_inplace_map_constructor.cpp  test_inplace_map_emplace.cpp  test_inplace_map_erase.cpp  test_inplace_map_find.cpp  test_inplace_map_insert.cpp  test_inplace_map_lower_upper_bound.cpp  test_inplace_map_structurality.cpp
test/inplace_set/: test_inplace_set_assignment.cpp  test_inplace_set_constructor.cpp  test_inplace_set_emplace.cpp  test_inplace_set_erase.cpp  test_inplace_set_find.cpp  test_inplace_set_insert.cpp  test_inplace_set_lower_upper_bound.cpp  test_inplace_set_structurality.cpp
test/inplace_unordered_map/: test_inplace_map_structurality.cpp  test_inplace_unordered_map_assignment.cpp  test_inplace_unordered_map_constructor.cpp  test_inplace_unordered_map_emplace.cpp  test_inplace_unordered_map_erase.cpp  test_inplace_unordered_map_find.cpp  test_inplace_unordered_map_insert.cpp
test/inplace_unordered_set/: test_inplace_unordered_set_assignment.cpp  test_inplace_unordered_set_constructor.cpp  test_inplace_unordered_set_emplace.cpp  test_inplace_unordered_set_erase.cpp  test_inplace_unordered_set_find.cpp  test_inplace_unordered_set_insert.cpp  test_inplace_unordered_set_structurality.cpp
test/inplace_vector/: test_inplace_vector_assignment.cpp  test_inplace_vector_comparison.cpp  test_inplace_vector_construction.cpp  test_inplace_vector_read_access.cpp  test_inplace_vector_structurality.cpp  test_inplace_vector_write_access.cpp
test/serialization/: serialize_helper.hpp  test_serialize_aggregate.cpp  test_serialize_arithmetic.cpp  test_serialize_chrono.cpp  test_serialize_enum.cpp  test_serialize_expected.cpp  test_serialize_optional.cpp  test_serialize_range.cpp  test_serialize_tuple_like.cpp  test_serialize_unique_ptr.cpp  test_serialize_variant.cpp
test/static_map/: test_static_map_assignment.cpp  test_static_map_constructor.cpp  test_static_map_emplace.cpp  test_static_map_erase.cpp  test_static_map_find.cpp  test_static_map_insert.cpp  test_static_map_lower_upper_bound.cpp  test_static_map_structurality.cpp
test/static_set/: test_static_set_assignment.cpp  test_static_set_constructor.cpp  test_static_set_emplace.cpp  test_static_set_erase.cpp  test_static_set_find.cpp  test_static_set_insert.cpp  test_static_set_lower_upper_bound.cpp  test_static_set_structurality.cpp
test/static_unordered_map/: test_static_map_structurality.cpp  test_static_unordered_map_assignment.cpp  test_static_unordered_map_constructor.cpp  test_static_unordered_map_emplace.cpp  test_static_unordered_map_erase.cpp  test_static_unordered_map_find.cpp  test_static_unordered_map_insert.cpp
test/static_unordered_set/: test_static_unordered_set_assignment.cpp  test_static_unordered_set_constructor.cpp  test_static_unordered_set_emplace.cpp  test_static_unordered_set_erase.cpp  test_static_unordered_set_find.cpp  test_static_unordered_set_insert.cpp  test_static_unordered_set_structurality.cpp
test/static_vector/: test_static_vector_assignment.cpp  test_static_vector_comparison.cpp  test_static_vector_construction.cpp  test_static_vector_read_access.cpp  test_static_vector_structurality.cpp  test_static_vector_write_access.cpp
test/structuralization/: test_structuralize_aggregate.cpp  test_structuralize_optional.cpp  test_structuralize_range.cpp  test_structuralize_tuple_like.cpp  test_structuralize_unique_ptr.cpp  test_structuralize_variant.cpp
(+19 files in other folders)
